[package]
name = "ping_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.43.0", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_NetworkManagement_Dns",
    "Win32_NetworkManagement_IpHelper"
]}
widestring = "1.0.2"
anyhow = "1.0.66"